==> yhy666610/Tabletop_System/driver/st7789.c <==
#include "FreeRTOS.h"
#include "task.h"
#include "semphr.h"
#include "stm32f4xx.h"
#include "st7789.h"
#define CS_PORT     GPIOE
#define CS_PIN      GPIO_Pin_2
#define RESET_PORT  GPIOE
#define RESET_PIN   GPIO_Pin_3
#define DC_PORT     GPIOE
#define DC_PIN      GPIO_Pin_4
#define BL_PORT     GPIOE
#define BL_PIN      GPIO_Pin_5

static void st7789_write_register(uint8_t reg, uint8_t data[], uint16_t len)
{
    SPI_DataSizeConfig(SPI2, SPI_DataSize_8b);// 设置为8位数据模式

    GPIO_ResetBits(CS_PORT, CS_PIN);

    GPIO_ResetBits(DC_PORT, DC_PIN);
    SPI_SendData(SPI2, reg);
    while (SPI_GetFlagStatus(SPI2, SPI_FLAG_TXE) == RESET);
    while (SPI_GetFlagStatus(SPI2, SPI_FLAG_BSY) == SET);

    GPIO_SetBits(DC_PORT, DC_PIN);

    for (uint16_t i = 0; i < len; i++)
    {
        SPI_SendData(SPI2, data[i]);
        while (SPI_GetFlagStatus(SPI2, SPI_FLAG_TXE) == RESET);
    }
    while (SPI_GetFlagStatus(SPI2, SPI_FLAG_BSY) == SET);

    GPIO_SetBits(CS_PORT, CS_PIN);
}

static void st7789_reset(void)
{
    GPIO_ResetBits(RESET_PORT, RESET_PIN);
    vTaskDelay(pdMS_TO_TICKS(2)); //20us以上
    GPIO_SetBits(RESET_PORT, RESET_PIN);
    vTaskDelay(pdMS_TO_TICKS(120));
}

static void st7789_set_backlight(bool on)
{
    GPIO_WriteBit(BL_PORT, BL_PIN, on ? Bit_SET : Bit_RESET);
}

void st7789_init_display(void)
{
    st7789_reset();

    st7789_write_register(0x11, NULL, 0); // Sleep OUT
    vTaskDelay(pdMS_TO_TICKS(5));

    st7789_write_register(0x36, (uint8_t[]){0x00}, 1); // MADCTL
    st7789_write_register(0x3A, (uint8_t[]){0x55}, 1); // COLMOD
    st7789_write_register(0xB7, (uint8_t[]){0x46}, 1);
    st7789_write_register(0xBB, (uint8_t[]){0x1B}, 1);
    st7789_write_register(0xC0, (uint8_t[]){0x2C}, 1);
    st7789_write_register(0xC2, (uint8_t[]){0x01}, 1);
    st7789_write_register(0xC4, (uint8_t[]){0x20}, 1);
    st7789_write_register(0xC6, (uint8_t[]){0x0F}, 1);
    st7789_write_register(0xD0, (uint8_t[]){0xA4,0xA1}, 2);
    st7789_write_register(0xD6, (uint8_t[]){0xA1}, 1);
    st7789_write_register(0xE0, (uint8_t[]){0xF0,0x00,0x06,0x04,0x05,0x05,0x31,0x44,0x48,0x36,0x12,0x12,0x2B,0x34}, 14);
    st7789_write_register(0xE0, (uint8_t[]){0xF0,0x0B,0x0F,0x0F,0x0D,0x26,0x31,0x43,0x47,0x38,0x14,0x14,0x2C,0x32}, 14);
    st7789_write_register(0x20, NULL, 0);
    st7789_write_register(0x29, NULL, 0); // Display ON

    st7789_fill_color(0, 0, ST7789_WIDTH - 1, ST7789_HEIGHT - 1, 0x0000); // Fill black
    st7789_set_backlight(true);
}

void st7789_fill_color(uint16_t x1, uint16_t y1, uint16_t x2, uint16_t y2, uint16_t color)
{
    if (!in_screen_bound(x1, y1, x2, y2))
        return;

    st7789_set_range(x1, y1, x2, y2);
    st7789_set_gram_mode();

    uint32_t total_pixels = (x2 - x1 + 1) * (y2 - y1 + 1);
    st7789_write_gram((uint8_t *)&color, total_pixels * 2, true);
}

static void st7789_write_chinese(uint16_t x, uint16_t y, const char *ch, uint16_t color, uint16_t bg_color, const font_t *font)
{
    if (ch == NULL || font == NULL)
        return;
    uint16_t fheight = font->size, fwidth = font->size;
    if (!in_screen_bound(x, y, x + fwidth - 1, y + fheight - 1))
        return;

    const font_chinese_t *chinese_font = font->chinese;
    while (chinese_font->name != NULL)
    {
        if (strcmp(chinese_font->name, ch) == 0)
        {
            st7789_draw_font(x, y, fwidth, fheight, chinese_font->model, color, bg_color);
            return;
        }
        chinese_font++;
    }

    /* 鱼佬写法 */
    // const font_chinese_t *c = font->chinese;
    // for (; c->name != NULL; c++)
    // {
    //     if (strcmp(c->name, ch) == 0)
    //         break;
    // }
    // if (c->name == NULL)
    //     return;

    // st7789_draw_font(x, y, fwidth, fheight, c->model, color, bg_color);
}

void st7789_draw_image(uint16_t x, uint16_t y, const image_t *image)
{
    if (image == NULL)
        return;

    uint16_t img_width = image->width;
    uint16_t img_height = image->height;

    if (!in_screen_bound(x, y, x + img_width - 1, y + img_height - 1))
        return;

    st7789_set_range(x, y, x + img_width - 1, y + img_height - 1);
    st7789_set_gram_mode();
    st7789_write_gram((uint8_t *)image->data, img_width * img_height * 2, false);
}
